1999-02-22  Jim Kingdon  <http://www.cyclic.com>

	* version.c: Ease version number to 1.10.5.1.

	* version.c: Version 1.10.5.

1999-02-18  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (files): New test, for a relatively obscure spurious
	"Up-to-date check failed" in client/server.

	* main.c (lookup_command_attribute): Don't check for "history"
	twice.

1999-02-17  Jim Kingdon  <http://www.cyclic.com>
	    and Hallvard B Furuseth

	* root.c (parse_cvsroot): Rearrange ifdefs to squelch possible
	warnings about statement not reached.

1999-02-16  Jim Kingdon  <http://www.cyclic.com>

	* recurse.c (start_recursion): If we are skipping the current
	directory (due to it being from the wrong repository), also adjust
	the arguments we send to the server accordingly (like we already
	do for the case in which there is no CVS directory).
	* sanity.sh (multiroot4): New test, for this.  All these tests had
	passed locally, but remote multiroot4-12 tests for this fix.
	(multiroot): Adjust multiroot-diff-1, multiroot-update-2,
	multiroot-tag-1, multiroot-status-1, multiroot-update-3, and
	multiroot-log-1 to reflect the cosmetic change this produces (one
	less "Diffing ." message).
	(multiroot2): multiroot2-8 likewise.

1999-02-10  Jim Kingdon  <http://www.cyclic.com>

	* tag.c (cvstag): Don't pass SEND_NO_CONTENTS if -c specified.
	* sanity.sh (tagc): New test, for various tag -c behaviors.
	Test tagc-6 tests for this fix.

1999-02-09  Jim Kingdon  <http://www.cyclic.com>

	* error.c (error): Rewrite to no longer use vasprintf (see
	../lib/ChangeLog for rationale).  Note the slight change in
	interface - callers which want %8.8s or similar formats need to
	call sprintf.
	* lock.c (lock_wait, lock_obtained): Use sprintf.

1999-02-08  Jim Kingdon  <http://www.cyclic.com>

	* rcs.c (RCS_delete_revs): Pass -a to diff_exec.
	* sanity.sh (binfiles3): New tests binfiles3-9 through
	binfiles3-13 test for this fix.
	* sanity.sh (binfiles): New tests binfiles-o4 and binfiles-o5